[project]
name = "uncycle"
version = "0.1.0"
description = "Tool to help unravel cyclic dependencies through virtual packages"
authors = [
    {name = "Matt Hauff", email = "quexington@gmail.com"},
    {name = "Richard Kiss", email = "him@richardkiss.com"},
]
dependencies = [
    "click==8.1.7",
    "PyYAML==6.0.1",
    "graphviz",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
uncycle = "uncycle.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["uncycle"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
